Update 4.1 Apply secure design principles in network architectures.md

--- a/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
+++ b/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
@@ -1318,3 +1318,271 @@ Organizations may face complexity in defining and managing granular policies for
 
 ## 4.1.12 Edge networks (e.g., ingress/egress, peering) ##
 
+Edge networks are the points where an organization's network connects to external networks, such as the internet, cloud services, or partner networks. These connection points play a critical role in managing traffic flow, security, and performance.
+
+At the edge, ingress refers to incoming traffic from external sources, while egress refers to outgoing traffic. Controlling ingress and egress traffic is essential for preventing unauthorized access and data leaks. Firewalls, intrusion detection/prevention systems (IDS/IPS), and data loss prevention (DLP) tools are commonly used to filter and monitor this traffic, ensuring that only permitted data enters or leaves the network.
+
+Peering is another key concept in edge networks. It occurs when two networks directly exchange traffic, typically between internet service providers (ISPs) or between an organization and cloud providers. Peering reduces reliance on third-party transit providers, improving network performance and reducing costs. Large enterprises and data centers often establish private peering agreements with major cloud providers to optimize speed and reliability.
+
+Performance optimization is also a major concern in edge networks. Content delivery networks (CDNs) and edge computing help reduce latency by processing data closer to users instead of relying on a central data center. This is especially important for applications requiring real-time responses, such as streaming services, online gaming, and IoT devices.
+
+From a security standpoint, edge networks require strong protections to prevent attacks such as DDoS (Distributed Denial of Service), man-in-the-middle attacks, and data exfiltration. Implementing zero trust principles at the edge ensures that every connection is authenticated and monitored, reducing the risk of unauthorized access.
+
+## 4.1.13 Wireless networks (e.g., Bluetooth, Wi-Fi, Zigbee, satellite) ##
+
+Based on the IEEE 802.11 family of standards, Wi-Fi enables devices to connect to a network without the need for physical cables, offering mobility and flexibility. However, the efficiency, security, and performance of Wi-Fi depend on multiple factors, including frequency bands, wireless standards, encryption mechanisms, authentication protocols, and network design strategies.
+
+Wi-Fi networks operate on different frequency bands, which affect their range, speed, and susceptibility to interference. The primary bands used are 2.4 GHz, 5 GHz, and 6 GHz.
+
+- **2.4 GHz Band**: This is one of the oldest and most widely used frequency bands, offering better coverage and penetration through walls due to its lower frequency. However, because many devices such as Bluetooth devices, microwaves, and cordless phones also use this frequency, interference is a common problem. The 2.4 GHz band has 14 channels, but in most regions, only channels 1, 6, and 11 are non-overlapping, meaning they do not interfere with each other.
+
+- **5 GHz Band**: Provides significantly higher speeds and more channels compared to 2.4 GHz. It experiences less interference but has a shorter range due to higher frequencies. The 5 GHz band includes multiple non-overlapping channels, reducing congestion and improving network performance.
+
+- **6 GHz Band (Wi-Fi 6E)**: Introduced with Wi-Fi 6E, this band offers even more channels, reduced latency, and lower interference. It is specifically designed for high-performance applications and environments with many connected devices, such as large office buildings, stadiums, and smart homes.
+
+The evolution of Wi-Fi has been driven by different 802.11 standards, each introducing improvements in speed, efficiency, and security.
+
+- 802.11a (1999) – 5 GHz, speeds up to 54 Mbps, limited adoption due to high cost.
+
+- 802.11b (1999) – 2.4 GHz, speeds up to 11 Mbps, widely adopted due to lower cost.
+
+- 802.11g (2003) – 2.4 GHz, speeds up to 54 Mbps, backward compatible with 802.11b.
+
+- 802.11n (Wi-Fi 4) (2009) – Introduced MIMO (Multiple Input, Multiple Output) for higher speeds (up to 600 Mbps), supported both 2.4 GHz and 5 GHz bands.
+
+- 802.11ac (Wi-Fi 5) (2014) – Focused on the 5 GHz band, introduced MU-MIMO (Multi-User MIMO) for improved performance in high-density environments, supported Gigabit speeds.
+
+- 802.11ax (Wi-Fi 6 and Wi-Fi 6E) (2019) – Introduced OFDMA (Orthogonal Frequency Division Multiple Access) for improved efficiency, TWT (Target Wake Time) for battery savings, and BSS Coloring to reduce co-channel interference. Wi-Fi 6E extended these benefits to the 6 GHz band.
+
+The SSID (Service Set Identifier) is the name of a Wi-Fi network, which allows users to identify and connect to the correct network. While hiding the SSID (disabling SSID broadcast) can provide minor obscurity, it is not a true security measure, as the SSID remains visible in network packets.
+
+To secure an SSID:
+- Use strong encryption (WPA2 or WPA3)
+- Disable WPS (Wi-Fi Protected Setup), which is vulnerable to brute-force attacks
+- Implement MAC address filtering (though not foolproof, as MAC addresses can be spoofed)
+- Use 802.1X authentication for enterprise networks
+
+Wireless security has evolved over time to address vulnerabilities:
+- WEP (Wired Equivalent Privacy): Early encryption standard, now obsolete due to weak encryption and easy cracking methods.
+
+- WPA (Wi-Fi Protected Access): Introduced TKIP (Temporal Key Integrity Protocol) to improve WEP security but remained vulnerable.
+
+- WPA2: Introduced AES (Advanced Encryption Standard) with CCMP for strong encryption; still widely used.
+
+- WPA3: Latest standard, enhances security with Simultaneous Authentication of Equals (SAE), protects against offline password attacks, and improves encryption for open networks.
+
+In corporate environments, 802.1X authentication is used alongside EAP (Extensible Authentication Protocol) to enforce strict user authentication before granting network access. Common EAP methods include:
+- EAP-TLS (certificate-based, highly secure)
+- EAP-PEAP (password-based, commonly used in enterprise networks)
+802.1X is typically integrated with RADIUS servers to authenticate users based on certificates, passwords, or smart cards.
+
+WiFi networks provide convenience, but they also introduce security risks. Attackers exploit vulnerabilities in wireless encryption, authentication, and network configurations to gain unauthorized access, steal data, or disrupt services. 
+
+An **Evil Twin attack** involves creating a rogue WiFi network that mimics a legitimate access point (AP). Attackers configure a hotspot with the same SSID (Service Set Identifier) as a trusted network, tricking users into connecting. Once connected, users unknowingly send their login credentials, emails, and other sensitive data through the attacker’s device.
+- Attackers use software tools like WiFi Pineapple or Airbase-ng to create fake hotspots.
+- Victims may connect automatically if their device is set to "auto-connect" to familiar networks.
+- Attackers can perform Man-in-the-Middle (MitM) attacks, intercepting unencrypted traffic or injecting malicious payloads.
+
+Prevention:
+- Verify the correct SSID and security settings before connecting to public WiFi.
+- Use VPN encryption to protect data from eavesdropping.
+- Disable auto-connect for open WiFi networks.
+
+A **Deauthentication attack** exploits the lack of authentication for management frames in WiFi networks, forcing devices to disconnect. Attackers send deauthentication frames to a target device, causing it to lose connection to a legitimate AP. This is commonly used for:
+Denial of Service (DoS): Repeated deauthentication packets prevent a victim from staying online.
+Capturing Handshakes: Attackers force users to reconnect to capture WPA2 handshakes for offline password cracking.
+
+Tools like aireplay-ng in Kali Linux automate these attacks. The introduction of WPA3 and Protected Management Frames (PMF) helps mitigate deauth attacks, but many networks still use older standards.
+
+Prevention:
+- Enable 802.11w (PMF) on routers to protect against deauthentication frames.
+- Use WPA3 security instead of WPA2 where possible.
+- Monitor network activity for excessive deauth packets using IDS/IPS solutions.
+
+The **Key Reinstallation Attack (KRACK)** exploits weaknesses in WPA2 encryption by manipulating the four-way handshake process used for authentication. By forcing devices to reuse encryption keys, attackers can decrypt transmitted data, even on supposedly secure networks.
+This attack affects almost all WPA2-protected networks, allowing hackers to:
+- Intercept and read encrypted traffic.
+- Inject malicious content into web pages.
+- Steal credentials, messages, and other private data.
+
+Prevention:
+- Update devices with patches that fix the KRACK vulnerability.
+- Use WPA3, which addresses this weakness.
+- Always use HTTPS and VPNs to encrypt traffic beyond the WiFi layer.
+
+Attackers use **packet sniffing** tools to capture unencrypted WiFi traffic. This allows them to:
+- Read login credentials, emails, and messages sent over unencrypted websites (HTTP instead of HTTPS).
+- Extract cookies to hijack authenticated sessions (session hijacking).
+- Gather intelligence about connected devices and their communications.
+
+Tools like Wireshark, tcpdump, and Kismet can capture packets on open or poorly secured WiFi networks.
+
+Prevention:
+- Use only HTTPS websites (look for the padlock in your browser).
+- Encrypt all traffic with VPNs.
+- Avoid using public WiFi for sensitive transactions.
+
+A **Rogue AP** is an unauthorized access point connected to a secure network. These can be set up by:
+- Employees for convenience, but without proper security.
+- Hackers who plug in an AP to infiltrate corporate networks.
+
+
+Once a rogue AP is active, attackers can intercept internal traffic, perform MitM attacks, and exploit weakly secured endpoints.
+
+Prevention:
+- Implement Wireless Intrusion Detection Systems (WIDS) to detect rogue APs.
+- Require 802.1X authentication to prevent unauthorized devices from connecting.
+- Regularly scan the network for unauthorized SSIDs and rogue APs.
+
+If an attacker captures a **WPA2-PSK (Pre-Shared Key) handshake**, they can attempt to brute-force or dictionary attack the password offline. Tools like hashcat and Aircrack-ng are commonly used to crack weak WiFi passwords.
+
+Prevention:
+- Use strong, unique passwords (at least 16+ characters, including symbols and numbers).
+- Enable WPA3, which uses Simultaneous Authentication of Equals (SAE) to resist brute-force attacks.
+- Implement MAC address filtering (though it is not foolproof).
+
+**WiFi Protected Setup (WPS)** is a feature designed to make it easier to connect devices, but it has a severe vulnerability. Attackers can use tools like Reaver to brute-force the 8-digit WPS PIN, which grants access to WPA2 networks in just a few hours.
+
+Prevention:
+- Disable WPS completely in router settings.
+- Use strong WPA2/WPA3 passwords.
+- Check for unauthorized devices connected to the network.
+
+
+**Captive portals** are the login pages used by public WiFi hotspots in places like hotels and airports. Attackers create fake captive portals that look legitimate but steal entered credentials.
+Users who enter email addresses, passwords, or payment details are exposed.
+Attackers can redirect victims to malicious websites.
+
+
+Prevention:
+- Verify the hotspot belongs to a legitimate provider before entering credentials.
+- Use VPNs to encrypt traffic before logging in.
+- Avoid logging into sensitive accounts on public WiFi.
+
+Attackers can disrupt WiFi networks by jamming signals using high-power transmitters on the same frequency. This can:
+- Prevent legitimate devices from connecting.
+- Force users to switch to less secure fallback networks (e.g., mobile data, public hotspots).
+
+Prevention:
+- Use 5 GHz bands, which are less prone to interference.
+- Deploy WiFi intrusion detection systems (WIDS) to monitor signal anomalies.
+- Set up redundant communication channels for critical systems.
+
+Implementing best practices can protect against most threats. Here’s a summary of **key security measures**:
+- Use WPA3 encryption instead of WPA2.
+- Disable WPS to prevent brute-force attacks.
+- Enable 802.11w (PMF) to block deauthentication attacks.
+- Regularly scan for rogue APs and unauthorized connections.
+- Always use VPNs and HTTPS when connecting to public WiFi.
+- Set strong, complex passwords and rotate them periodically.
+
+:necktie: Wireless networks are inherently more vulnerable than wired connections, but by staying informed and proactive, you can significantly reduce security risks.
+
+**Bluetooth** is a short-range wireless communication technology designed for device-to-device connectivity. It operates in the 2.4 GHz ISM (Industrial, Scientific, and Medical) band, using frequency-hopping spread spectrum (FHSS) to minimize interference and improve reliability.
+The technology is defined under **IEEE 802.15.1** and has evolved through multiple versions, improving speed, range, and power efficiency. Early versions like Bluetooth 2.0 (2004) supported Enhanced Data Rate (EDR) with speeds up to 3 Mbps, while Bluetooth 4.0 (2010) introduced Bluetooth Low Energy (BLE) for power-efficient applications, such as IoT devices. The latest versions, Bluetooth 5.0 and 5.3, enhance long-range communication and data throughput, supporting IoT and smart home applications.
+Bluetooth devices form piconets, where a single master device connects with multiple slaves, and scatternets, where multiple piconets interconnect. Pairing and authentication mechanisms such as Simple Secure Pairing (SSP), Just Works, Numeric Comparison, and Passkey Entry improve security, while AES-CCM encryption ensures data protection.
+Security threats include bluejacking (unauthorized messages), bluesnarfing (data theft), and man-in-the-middle attacks. Best practices include disabling discoverability, using Bluetooth 5+ for improved encryption, and enforcing two-factor authentication where possible.
+
+**ZigBee** is a wireless protocol built for low-power, low-data-rate applications in IoT, smart homes, and industrial automation. It operates under **IEEE 802.15.4**, primarily in the 2.4 GHz, 900 MHz, and 868 MHz bands.
+Unlike Bluetooth, which focuses on device-to-device connections, ZigBee is optimized for mesh networking, allowing devices to relay data across long distances without relying on a central hub. A ZigBee network consists of coordinators, routers, and end devices, where routers extend network coverage and enable communication between multiple nodes.
+ZigBee’s data rate is up to 250 kbps, making it ideal for sensor networks, smart meters, and building automation rather than high-bandwidth applications. It supports 128-bit AES encryption but remains vulnerable to jamming and replay attacks. To secure a ZigBee network, best practices include using strong encryption keys, disabling unused device joining, and segmenting networks based on function.
+ZigBee competes with technologies like Z-Wave but is widely supported in smart home ecosystems, including Amazon Echo, Google Nest, and Philips Hue. Its low power consumption, ability to scale into large networks, and support for self-healing mesh networking make it a key technology for the future of IoT.
+
+**NFC (Near Field Communication)** is a short-range wireless technology designed for contactless data exchange, working within a range of about 4 cm. Based on RFID (Radio Frequency Identification) standards, NFC operates at 13.56 MHz and enables communication between active and passive devices.
+NFC supports three main modes: reader/writer mode, used in access control and payment terminals; peer-to-peer mode, enabling data transfer between smartphones; and card emulation mode, which allows a device to function as an NFC tag for payments and authentication. The most common application is in contactless payments via Google Pay, Apple Pay, and credit cards, leveraging standards like EMVCo for secure transactions.
+
+Security concerns in NFC include eavesdropping, relay attacks, and data interception. To mitigate risks, NFC employs AES encryption, rolling security keys, and tokenization. However, because it requires close physical proximity, interception risks are lower than in Bluetooth and Wi-Fi.
+NFC is widely used in public transportation, mobile payments, access control, and electronic ticketing. As IoT expands, NFC is being integrated into smart locks, medical devices, and inventory tracking systems, further increasing its role in secure, seamless communication.
+
+**RFID (Radio Frequency Identification)** is a wireless identification and tracking technology using radio waves to communicate between a reader and an RFID tag. It is widely used in supply chain management, inventory tracking, access control, and contactless payments.
+RFID operates across multiple frequency bands, including Low Frequency (LF, 125-134 kHz), High Frequency (HF, 13.56 MHz), and Ultra High Frequency (UHF, 860-960 MHz). LF RFID is used in animal tracking and access badges, HF RFID supports NFC applications, and UHF RFID is prevalent in warehouse logistics and retail due to its longer range.
+RFID tags are categorized as passive, active, or semi-passive. Passive tags have no internal power source and rely on the RFID reader's signal, making them cheap but short-range (a few meters). Active tags contain a battery, enabling long-range communication (up to 100 meters), commonly used in vehicle tracking and toll systems.
+Security risks include skimming, cloning, and replay attacks, especially in payment cards and access control badges. Countermeasures include AES encryption, frequency hopping, and physical shielding (e.g., RFID-blocking wallets).
+RFID continues to expand into healthcare, logistics, and smart manufacturing, enhancing efficiency in real-time asset tracking, automated checkout systems, and counterfeit prevention.
+
+Satellite networks provide long-range communication, enabling global connectivity for voice, data, and internet services where terrestrial networks are unavailable. Satellites operate in different orbits:
+Low Earth Orbit (LEO, 500-2,000 km) – Used for Starlink, OneWeb, and Iridium, offering low-latency broadband internet.
+Medium Earth Orbit (MEO, 2,000-35,000 km) – Used for GPS, Galileo, and other navigation systems.
+Geostationary Orbit (GEO, 35,786 km) – Used for satellite TV, weather monitoring, and military communications, offering consistent coverage over a fixed region.
+
+**Satellite communication** operates in C-band, Ku-band, Ka-band, and L-band, with Ka-band offering high-speed internet but being more susceptible to rain fade. VSAT (Very Small Aperture Terminal) systems allow businesses and governments to deploy private satellite networks for remote operations.
+Challenges include high latency, signal degradation due to atmospheric interference, and vulnerability to jamming and cyber threats. Security measures include end-to-end encryption, anti-jamming techniques, and frequency-hopping protocols.
+Emerging technologies, such as LEO satellite constellations, laser communication, and AI-driven adaptive networks, are revolutionizing satellite connectivity, enabling low-latency global broadband access and extending coverage to rural and underserved regions.
+Satellite networks continue to play a critical role in disaster recovery, military operations, maritime communications, and global internet accessibility, bridging the gap where fiber-optic and mobile networks are impractical.
+
+### Open Questions ###
+
+1. What are the main differences between the 2.4 GHz, 5 GHz, and 6 GHz Wi-Fi bands in terms of coverage, speed, and interference?
+<details>
+  <summary>Show answer</summary>
+2.4 GHz offers wider coverage and better wall penetration but is prone to interference from Bluetooth, microwaves, and cordless phones.
+
+5 GHz provides faster speeds and more channels with less interference but has shorter range.
+
+6 GHz (Wi-Fi 6E) offers the most channels, lower latency, and high performance, ideal for dense environments like offices or stadiums.
+</details>
+
+2. How has Wi-Fi evolved through the different IEEE 802.11 standards, and why is this evolution important for security?
+<details>
+  <summary>Show answer</summary>
+Wi-Fi evolved from 802.11b/g (slow, weak security) → 802.11n (MIMO, dual-band) → 802.11ac (MU-MIMO, gigabit speeds) → 802.11ax (Wi-Fi 6/6E) with OFDMA, BSS coloring, and WPA3 support.
+This evolution improved not only speed and efficiency but also security, as older protocols like WEP/WPA are now obsolete.
+</details>
+
+3. Why is hiding the SSID not a strong security measure, and what should be done instead?
+<details>
+  <summary>Show answer</summary>
+Hiding the SSID only removes it from broadcast, but it’s still visible in packets, so attackers can easily detect it.
+Instead, use WPA3 encryption, disable WPS, enable 802.1X for enterprise, and enforce strong passwords.
+</details>
+
+4. What security improvements does WPA3 provide compared to WPA2?
+<details>
+  <summary>Show answer</summary>
+WPA3 introduces SAE (Simultaneous Authentication of Equals) to resist offline dictionary attacks, stronger encryption for open networks, and mandatory Protected Management Frames (PMF). This closes gaps left in WPA2 and prevents common attacks like brute-forcing PSK handshakes.
+</details>
+
+5. How does 802.1X authentication improve Wi-Fi security in enterprise environments?
+<details>
+  <summary>Show answer</summary>
+802.1X uses port-based access control with EAP protocols and a RADIUS server. It authenticates users before granting access, supports certificates (EAP-TLS), and integrates with Active Directory. This prevents unauthorized devices from joining the Wi-Fi network.
+</details>
+
+6. What is an Evil Twin attack, and how can users defend against it?
+<details>
+  <summary>Show answer</summary>
+An Evil Twin is a rogue access point configured with the same SSID as a legitimate Wi-Fi network. Users connect unknowingly, and attackers perform Man-in-the-Middle attacks.
+Prevention: Always verify SSIDs, disable auto-connect, use VPNs, and rely on WPA3 with certificate-based authentication.
+</details>
+
+7. What is a Wi-Fi deauthentication attack, and what protocols mitigate it?
+<details>
+  <summary>Show answer</summary>
+A deauthentication attack sends spoofed management frames to disconnect devices, used for DoS or handshake capture.
+Mitigation: Enable 802.11w Protected Management Frames (PMF), upgrade to WPA3, and monitor with IDS/IPS.
+</details>
+
+8. What was the KRACK attack, and what lessons did it teach about Wi-Fi security?
+<details>
+  <summary>Show answer</summary>
+KRACK exploited the WPA2 four-way handshake to force key reinstallation, allowing attackers to decrypt traffic.
+Lesson: Even strong protocols can have implementation flaws, so patching devices and adopting WPA3 is critical.
+</details>
+
+9. Why is Wi-Fi Protected Setup (WPS) considered insecure, and what should administrators do about it?
+<details>
+  <summary>Show answer</summary>
+WPS uses an 8-digit PIN that can be brute-forced in hours with tools like Reaver. Once cracked, the attacker gains Wi-Fi access.
+Countermeasure: Disable WPS entirely and rely on WPA2/WPA3 with strong passwords.
+</details>
+
+10. How do rogue access points threaten corporate Wi-Fi security, and how can organizations detect them?
+<details>
+  <summary>Show answer</summary>
+A rogue AP is any unauthorized Wi-Fi device connected to the network. It can bypass security controls and allow attackers inside.
+Prevention: Use Wireless Intrusion Detection Systems (WIDS), perform regular scans for rogue SSIDs, and enforce 802.1X authentication to block unauthorized devices.
+</details>
+
+---
+
+
