Update 4.1 Apply secure design principles in network architectures.md

--- a/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
+++ b/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
@@ -1587,4 +1587,64 @@ Prevention: Use Wireless Intrusion Detection Systems (WIDS), perform regular sca
 
 ## 4.1.14 Cellular/mobile networks (e.g., 4G, 5G) ##
 
+Mobile networks have evolved from the early 2G and 3G systems to today’s high-speed 4G and 5G networks. 4G revolutionized mobile internet by enabling smooth HD video streaming, VoIP calls, and online gaming, while 5G takes connectivity to another level with ultra-fast speeds, lower latency, and support for massive IoT deployments.
+
+4G, also known as LTE (Long Term Evolution), operates on a fully packet-switched network, meaning that both voice and data are transmitted using IP-based technology. It uses frequency bands ranging from 600 MHz to 5 GHz, with lower frequencies offering better coverage and penetration, while higher frequencies provide faster speeds. In real-world conditions, 4G speeds range from 10 to 100 Mbps, with peak theoretical speeds reaching 1 Gbps. However, in dense urban environments, network congestion can lead to slower speeds and higher latency, typically around 30–50 milliseconds.
+
+To improve on 4G’s limitations, 5G introduces new technology and spectrum usage. It operates in three bands: low-band (600 MHz to 900 MHz) for extended coverage, mid-band (1 GHz to 6 GHz) for balanced performance, and high-band millimeter wave (24 GHz to 100 GHz) for extremely high speeds but with limited range. Real-world 5G speeds range from 100 Mbps to 2 Gbps, with peak speeds reaching 10 Gbps under ideal conditions. Latency is significantly lower, often under 1 millisecond, making it suitable for applications like remote surgery, autonomous vehicles, and industrial automation.
+
+One of the biggest advantages of 5G is its ability to support millions of devices per square kilometer, making it crucial for the growth of smart cities and IoT networks. It also introduces network slicing, which allows different virtual networks to be created within the same physical infrastructure, optimizing performance for specific applications.
+
+Security is another key improvement in 5G. While 4G uses SIM-based authentication and AES-128 encryption, it is still vulnerable to attacks like IMSI catchers. 5G enhances security with stronger encryption, mutual authentication between devices and networks, and IMSI encryption to protect user identities.
+
+4G remains the dominant network in many regions and will continue to coexist with 5G for years. LTE-Advanced (LTE-A) and LTE-Advanced Pro (LTE-A Pro) offer enhanced speeds and lower latency, keeping 4G relevant while 5G deployment expands. Over time, 5G will become the primary network, especially as industries adopt applications requiring ultra-reliable, low-latency communication.
+
+Looking ahead, 6G is expected around 2030, promising even faster speeds, AI-driven network optimization, and the use of terahertz frequencies. Until then, 4G will serve as a reliable fallback network, while 5G continues to transform mobile connectivity and enable new technological advancements.
+
+| Feature              | 4G                          | 5G                                      |
+|----------------------|-----------------------------|------------------------------------------|
+| **Speed**            | Up to 1 Gbps                | Up to 10 Gbps                            |
+| **Latency**          | 30–50 ms                    | 1 ms                                     |
+| **Device Connectivity** | Thousands per km²          | Millions per km²                         |
+| **Network Architecture** | Centralized               | Decentralized, with edge computing       |
+| **Use cases**        | Video streaming, VoIP, gaming | IoT, autonomous vehicles, remote healthcare |
+
+### Open Questions ###
+
+1. How did the transition from 3G to 4G change the way mobile networks handle voice and data traffic?
+<details>
+  <summary>Show answer</summary>
+3G networks still relied partly on circuit-switched technology for voice calls, while 4G (LTE) moved entirely to packet-switched IP-based networks. This allowed voice and data to both run over the internet, enabling VoIP calls, HD video streaming, and real-time online gaming with much higher efficiency.
+</details>
+
+2. What are the main differences in frequency band usage between 4G and 5G, and why do they matter?
+<details>
+  <summary>Show answer</summary>
+4G operates mainly between 600 MHz and 5 GHz, balancing coverage and speed.
+5G introduces three tiers: low-band (wide coverage), mid-band (balanced performance), and high-band millimeter wave (24–100 GHz) for ultra-fast but short-range speeds.
+These bands matter because they enable flexibility in performance—from rural connectivity to ultra-high-speed urban networks.
+</details>
+
+3. Why is 5G considered a breakthrough for IoT and smart cities compared to 4G?
+<details>
+  <summary>Show answer</summary>
+5G can support millions of devices per square kilometer, thanks to its higher spectrum efficiency and network slicing technology. This makes it ideal for IoT deployments, smart cities, industrial automation, and autonomous vehicles, where massive connectivity and ultra-low latency are essential.
+</details>
+
+4. How does 5G improve security compared to 4G, and what risks still remain?
+<details>
+  <summary>Show answer</summary>
+5G enhances security with mutual authentication, stronger encryption, and IMSI encryption to protect user identities from tracking. However, risks like supply chain vulnerabilities, SS7/Diameter protocol weaknesses, and misconfigured network slices remain concerns for CISSP professionals.
+</details>
+
+5. What role will 4G continue to play as 5G adoption increases, and what can we expect from 6G?
+<details>
+  <summary>Show answer</summary>
+4G will coexist with 5G for years, acting as a fallback network where 5G isn’t fully deployed. Upgrades like LTE-Advanced and LTE-Advanced Pro keep it relevant with faster speeds and lower latency. Looking forward, 6G (around 2030) is expected to bring terahertz frequencies, AI-driven optimization, and even faster connectivity.
+</details>
+
+----
+
+
+
 
